--- a/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
@@ -9,13 +9,13 @@
                 <div class="col-md-6">
                     <label>Proyecto</label>
                     <select class="form-control" ng-model="model.project" ng-options="project.name for project in projects">
-                        <option value="">Seleccione Proyecto</option>
+                        <option value="">Seleccione proyecto</option>
                     </select>
                 </div>
                 <div class="col-md-6">
                     <label>Usuario</label>
                     <select class="form-control" ng-model="model.assignee" ng-options=" user.name for user in users">
-                        <option value="">Seleccione Usuario</option>
+                        <option value="">Seleccione usuario</option>
                     </select>
                 </div>
             </div>
