--- a/InfoWeb.Presentation/wwwroot/application/views/project/details.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/details.html
@@ -11,7 +11,7 @@
                         <label>Nombre: </label>{{innerAssignments.project.name}}
                     </div>
                     <div class="col-md-6">
-                        <label>Nombre: </label>{{innerAssignments.project.client.name}}
+                        <label>Cliente: </label>{{innerAssignments.project.client.name}}
                     </div>
                 </div>
             </div>
