--- a/InfoWeb.Presentation/wwwroot/application/views/role/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/role/list.html
@@ -30,8 +30,8 @@
                             </td>
                             <td>
                                 <span>
-                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(role.id)"></span>
-                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(role)"></span>
+                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(role.id)" title="Editar"></span>
+                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(role)" title="Eliminar"></span>
                                 </span>
                             </td>
                         </tr>
