--- a/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/user-input.html
@@ -12,7 +12,7 @@
                 <div class="col-md-6">
                     <label>Rol</label>
                     <select class="form-control" ng-model="model.role" ng-options="role.name for role in roles">
-                        <option value="">Seleccione</option>
+                        <option value="">Seleccione rol</option>
                     </select>
                 </div>
             </div>
