--- a/InfoWeb.Presentation/wwwroot/application/views/assignment-type/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignment-type/list.html
@@ -1,7 +1,7 @@
 ﻿<div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <span><b>Listado de tipos de asignación</b></span>
+            <span><b>Listado de Tipos de Asignación</b></span>
         </div>
         <div class="panel-body">
             <div id="search" class="pull-right">
@@ -30,8 +30,8 @@
                             </td>
                             <td>
                                 <span>
-                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(assignmentType.id)"></span>
-                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(assignmentType)"></span>
+                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(assignmentType.id)" title="Editar"></span>
+                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(assignmentType)" title="Eliminar"></span>
                                 </span>
                             </td>
                         </tr>
