--- a/InfoWeb.Presentation/wwwroot/application/views/login/login.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/login/login.html
@@ -1,49 +1,52 @@
-﻿<div class="container" id="panelLogin">
-    <div class="row">
-        <div class="panel">
-            <div class="panel-heading">
-                <div class="panel-title">
-                    <span>Autenticarse</span>
-                </div>
-            </div>
-          <hr />
-            <div class="panel-body" id="panelContent">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="section row">
-                            <div class="col-md-12">
-                                <label class="field-label text-muted fs18 mb10">Usuario</label>
-                                <div class="inner-addon left-addon">
-                                    <input class="form-control" placeholder="Nombre de usuario" ng-model="userName" />
-                                    <i class="glyphicon glyphicon-user"></i>
-                                </div>
-                            </div>                         
-                        </div>                       
-                        <!-- end section -->
-                        <div class="section row">
-                            <div class="col-md-12">
-                                <label class="field-label text-muted fs18 mb10">Contraseña</label>
-                                <div class="inner-addon left-addon">
-                                    <input class="form-control" placeholder="Contraseña" ng-model="password" type="password" />
-                                    <i class="glyphicon glyphicon-lock"></i>                                  
-                                </div>
-                            </div>                          
-                        </div>
-                        <!-- end section -->
-                        <label class="text-danger" ng-show="invalidCredentials">Usuario o contraseña incorrectos</label>
+﻿<form ng-keypress="sendForm($event);">
+    <div class="container" id="panelLogin">
+        <div class="row">
+            <div class="panel">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        <span>Autenticarse</span>
                     </div>
                 </div>
-            </div>
-            <div class="panel-footer" style="width:100%">
-                <div class="row">
-                    <div class="col-md-12">
-                        <button class="btn btn-primary btn-raised btn-info pull-right" style="margin-right:14%" ng-click="onLoginClicked();">Acceder</button>
+                <hr />
+                <div class="panel-body" id="panelContent">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="section row">
+                                <div class="col-md-12">
+                                    <label class="field-label text-muted fs18 mb10">Usuario</label>
+                                    <div class="inner-addon left-addon">
+                                        <input class="form-control" id="userName" placeholder="Nombre de usuario" ng-model="userName" autofocus/>
+                                        <i class="glyphicon glyphicon-user"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end section -->
+                            <div class="section row">
+                                <div class="col-md-12">
+                                    <label class="field-label text-muted fs18 mb10">Contraseña</label>
+                                    <div class="inner-addon left-addon">
+                                        <input class="form-control" placeholder="Contraseña" ng-model="password" type="password" />
+                                        <i class="glyphicon glyphicon-lock"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end section -->
+                            <label class="text-danger" ng-show="invalidCredentials">Usuario o contraseña incorrectos</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer" style="width:100%">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button class="btn btn-primary btn-raised btn-info pull-right" style="margin-right:14%" ng-click="onLoginClicked();">Acceder</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</form>
+
    
 
          
