--- a/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/delegate.html
@@ -9,13 +9,13 @@
                     <div class="col-md-4">
                         <label>Seleccione el proyecto</label>
                         <select class="form-control" ng-model="assignment.project" ng-options="project.name for project in projects">
-                            <option value="">Seleccione</option>
+                            <option value="">Seleccione proyecto</option>
                         </select>
                     </div>
                     <div class="col-md-4">
                         <label>Seleccione el usuario</label>
                         <select class="form-control" ng-model="assignment.user" ng-options=" user.name for user in users">
-                            <option value="">Seleccione</option>
+                            <option value="">Seleccione usuario</option>
                         </select>
                     </div>
                     <div class="col-md-4">
@@ -29,7 +29,7 @@
                     <div class="col-md-4">
                         <label>Seleccione el tipo de hora</label>
                         <select class="form-control" ng-model="assignment.hourType" ng-options="HoursType.name for HoursType in HoursTypes" ng-change="changeValue();">
-                            <option value="">Seleccione</option>
+                            <option value="">Seleccione tipo de hora</option>
                         </select>
                     </div>
                     <div class="col-md-4">
