--- a/InfoWeb.Presentation/wwwroot/application/views/project/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/list.html
@@ -1,12 +1,15 @@
 ﻿<div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <span><b>Listado de proyectos</b></span>
+            <span><b>Listado de Proyectos</b></span>
         </div>
         <div class="panel-body">
+            <div class="pull-left"  ng-show="currentUser.role.name == 'ADMIN'">
+                <button ng-click="onCreateClicked()" class="btn btn-primary btn-info btn-raised"><span class="glyphicon glyphicon-plus" style="margin-right:5px"></span>{{acceptButtonCaption}}</button>
+            </div>
             <div id="search" class="pull-right">
                 <div class="inner-addon left-addon">
-                    <input class="form-control" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})" />
+                    <input class="form-control" placeholder="Buscar..." ng-model="search.term" ng-click="model.tableParams.sorting({})"/>
                     <i class="glyphicon glyphicon-search"></i>
                 </div>
             </div>
@@ -24,12 +27,13 @@
                             <td>
                                 {{project.name}}
                             </td>
-                            <td>
+                            <td title="'Cliente'">
                                 {{project.client.name}}
                             </td>
-                            <td >
-                                <span class="glyphicon glyphicon-list" ng-click="viewDetails(project.id)"></span>
-                                <span ng-if="currentUser.role.name == 'ADMIN'" class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project)"></span>
+                            <td>
+                                <span class="glyphicon glyphicon-list" ng-click="viewDetails(project.id)" title="Ver"></span>
+                                <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(project.id)" ng-show="currentUser.role.name == 'ADMIN'"></span>
+                                <span ng-if="currentUser.role.name == 'ADMIN'" class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(project)" title="Eliminar"></span>
                             </td>
                         </tr>
                     </tbody>
