--- a/InfoWeb.Presentation/wwwroot/application/views/user/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/user/list.html
@@ -32,8 +32,8 @@
                             </td>
                             <td>
                                 <span>
-                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(user.id)"></span>
-                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(user)"></span>
+                                    <span class="glyphicon glyphicon-pencil" ng-click="onEditClicked(user.id)" title="Editar"></span>
+                                    <span class="glyphicon glyphicon-trash" ng-click="onRemoveClicked(user)" title="Eliminar"></span>
                                 </span>
                             </td>
                         </tr>
