--- a/InfoWeb.Presentation/wwwroot/application/views/assignment-type/assignment-type-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignment-type/assignment-type-input.html
@@ -1,7 +1,7 @@
 ﻿<div class="container-fluid">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <span>{{title}}</span>
+            <span><b>{{title}}</b></span>
         </div>
         <div class="panel-body">
             <div class="section row">
