--- a/InfoWeb.Presentation/wwwroot/application/views/assignment-type/assignment-type-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/assignment-type/assignment-type-input.html
@@ -4,15 +4,19 @@
             <span><b>{{title}}</b></span>
         </div>
         <div class="panel-body">
-            <div class="section row">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label>Nombre:</label>
-                        <input class="form-control" type="text" ng-model="model.name" />
+            <form name="assignmentTypeInput" novalidate ng-submit="onButtonClicked()">
+                <div class="section row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Nombre:</label>
+                            <input class="form-control" type="text" ng-model="model.name" 
+                                   name="assignmentTypeName" required/>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <button ng-click="onButtonClicked()" class="btn btn-primary btn-raised btn-info pull-right">{{acceptButtonCaption}}</button>
+                <button class="btn btn-primary btn-raised btn-info pull-right"
+                        ng-disabled="assignmentTypeInput.$invalid">{{acceptButtonCaption}}</button>
+            </form>
         </div>
     </div>
 </div>
