--- a/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/assign.html
@@ -5,25 +5,30 @@
             <span><b>Asignar Proyectos</b></span>
         </div>
         <div class="panel-body">
-            <div class="row">
-                <div class="col-md-6">
-                    <label>Proyecto</label>
-                    <select class="form-control" ng-model="model.project" ng-options="project.name for project in projects">
-                        <option value="">Seleccione proyecto</option>
-                    </select>
+            <form name="assignProject" novalidate ng-submit="assignProject()">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label>Proyecto</label>
+                        <select class="form-control" ng-model="model.project" ng-options="project.name for project in projects"
+                                required name="projectName">
+                            <option value="">Seleccione proyecto</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6">
+                        <label>Usuario</label>
+                        <select class="form-control" ng-model="model.assignee" ng-options=" user.name for user in users"
+                                required name="assigneeUser">
+                            <option value="">Seleccione usuario</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <label>Usuario</label>
-                    <select class="form-control" ng-model="model.assignee" ng-options=" user.name for user in users">
-                        <option value="">Seleccione usuario</option>
-                    </select>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-primary btn-raised pull-right btn-info"
+                                ng-disabled="assignProject.$invalid">Asignar</button>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <button class="btn btn-primary btn-raised pull-right btn-info" ng-click="assignProject();">Asignar </button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
    
