--- a/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
@@ -4,29 +4,33 @@
             <span><b>{{title}}</b></span>
         </div>
         <div class="panel-body">
-            <div class="section row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Nombre</label>
-                        <input class="form-control col-md-6" type="text" ng-model="model.name" />
+            <form name="projectInput" novalidate ng-submit="onButtonClicked()">
+                <div class="section row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Nombre</label>
+                            <input class="form-control col-md-6" type="text" name="projectName" ng-model="model.name" required/>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label>Tipo de Proyecto</label>
+                        <select class="form-control" ng-model="model.projectType" ng-options="projectType.name for projectType in projectTypes"
+                                name="projectType" required>
+                            <option value="">Seleccione el tipo</option>
+                        </select>
                     </div>
                 </div>
-                <div class="form-group col-md-6">
-                    <label>Tipo de Proyecto</label>
-                    <select class="form-control" ng-model="model.projectType" ng-options="projectType.name for projectType in projectTypes">
-                        <option value="">Seleccione el tipo</option>
-                    </select>
+                <div class="section row">
+                    <div class="col-md-6">
+                        <label>Cliente</label>
+                        <select class="form-control" ng-model="model.client" ng-options="client.name for client in clientes"
+                                name="client" required>
+                            <option value="">Seleccione cliente</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="section row">
-                <div class="col-md-6">
-                    <label>Cliente</label>
-                    <select class="form-control" ng-model="model.client" ng-options="client.name for client in clientes">
-                        <option value="">Seleccione cliente</option>
-                    </select>
-                </div>
-            </div>
-            <button ng-click="onButtonClicked()" class="btn btn-primary btn-info btn-raised pull-right">{{acceptButtonCaption}}</button>
+                <button type="submit" class="btn btn-primary btn-info btn-raised pull-right" ng-disabled="projectInput.$invalid">{{acceptButtonCaption}}</button>
+            </form>
         </div>
     </div>
 </div>
