--- a/InfoWeb.Presentation/wwwroot/application/views/client/list.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/client/list.html
@@ -1,4 +1,4 @@
-﻿<div class="container-fluid">
+﻿<div class="container-fluid tableStyle">
     <div class="panel panel-default">
         <div class="panel-heading">
             <span><b>Listado de Clientes</b></span>
