--- a/InfoWeb.Presentation/wwwroot/application/views/project/details.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/details.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="container-fluid">
+<div class="container-fluid tableStyle">
     <div class="panel panel-default">
         <div class="panel-heading">
             <span><b>Detalles del proyecto</b></span>
