--- a/InfoWeb.Presentation/wwwroot/application/views/login/login.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/login/login.html
@@ -1,5 +1,5 @@
 ﻿<form ng-keypress="sendForm($event);">
-    <div class="container" id="panelLogin">
+    <div class="container col-lg-offset-3 col-lg-4 col-sm-offset-3 col-sm-6 col-md-offset-2 col-md-6" id="panelLogin">
         <div class="row">
             <div class="panel">
                 <div class="panel-heading">
