--- a/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
+++ b/InfoWeb.Presentation/wwwroot/application/views/project/project-input.html
@@ -30,7 +30,12 @@
                         </select>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-info btn-raised pull-right" ng-disabled="projectInput.$invalid">{{acceptButtonCaption}}</button>
+                <div class="section row">
+                    <div class="col-md-12" hour-type hour-types="hourTypes" project-hour-types="model.projectHourTypes" target-form="projectInput">
+
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-info btn-raised pull-right" ng-disabled="projectInput.$invalid || model.projectHourTypes.length == 0">{{acceptButtonCaption}}</button>
             </form>
         </div>
     </div>
